--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/progweb
 spring.datasource.username=postgres
-spring.datasource.password=labcom,2015
+spring.datasource.password=EdwinV56
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
